# neuro-conda

./: .gitignore  LICENSE  README.md  README_DEV.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: test-fresh-installation.yml
envs/: neuro-conda-2023a.yml  neuro-conda-2023b.lock.txt  neuro-conda-2023b.txt  neuro-conda-2023b.yml  neuro-conda-2024a.yml  neuro-conda-2025b.yml  neuro-conda-latest.yml
libexec/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
tests/: conftest.py  test_packages.py
